aws/kubernetes/test/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-virtual-host-ingress
  namespace: gitea-testing
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  #  nginx.ingress.kubernetes.io/affinity: "cookie"
  #  nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
  #  nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
  #  nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: gitea.aws.eq.org.ua
  #- host: ae83c1fa272bd42e0882e3b88ccff1df-1253564474.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitea
            port:
              number: 3000
