aws/kubernetes/test/gitea-ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-virtual-host-ingress
  namespace: gitea-testing
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  #  nginx.ingress.kubernetes.io/affinity: "cookie"
  #  nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
  #  nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
  #  nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: 7d516d76be986696e536366ba3b03b74.yl4.eu-central-1.eks.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitea
            port:
              number: 3000
