aws/kubernetes/test/gitea_v1.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: efs-gitea-pvc
  namespace: gitea-testing
  labels:
    app: gitea
    type: efs
spec:
    #  storageClassName: gp2
  accessModes:
      #    - ReadWriteMany
    - ReadWriteOnce
  resources:
    requests:
      storage: 2Gi
      #  volumeName: nfs-gitea-pv
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30339
  selector:
    app: gitea
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - image: public.ecr.aws/z8h5r9b2/gitea:v1.113
        name: gitea
        env:
        - name: GITEA____APP_NAME
          #value: "Gitea:> Git with a cup of tea"
          valueFrom:
              fieldRef:
                  fieldPath: status.podIP
        - name: GITES____RUN_MODE
          value: prod
        - name: GITEA__database__DB_TYPE
          value: mysql
        - name: GITEA__database__HOST
          value: mysql:3306
        - name: GITEA__database__NAME
          value: gitea_db
        - name: GITEA__database__USER
          valueFrom:
            secretKeyRef:
              name: mysql-gitea-secret
              key: username
        - name: GITEA__database__PASSWD
          valueFrom:
            secretKeyRef:
              name: mysql-gitea-secret
              key: password
        - name: GITEA__server__ROOT_URL
          value: http://gitea.eq.org.ua/
        - name: GITEA__server__LFS_JWT_SECRET
          value: eqiu-ihY3KO0Uwz6MhYxagzAcABn01RR6TMyWMMdmog
        - name: GITEA__security__INTERNAL_TOKEN
          value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE2NzQ3Nzc3MjZ9.oI_kLfUUnQaJZJiwTIAF0BQmNg92CkFe-E6QVSkGJEw
        - name: GITEA__security__INSTALL_LOCK
          value: "false"
        - name: GITEA__security__SECRET_KEY
          value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE2NzUxMDA4NTZ9.gIdd5d-Ng_t6-atwyZEd3MgU-JEJZzAkhtiFxummUPg
        - name: GITEA__session__PROVIDER
          value: redis
        - name: GITEA__session__PROVIDER_CONFIG
          value: redis://redis:6379/0?pool_size=100&idle_timeout=180s
        - name: GITEA__queue__TYPE
          value: redis
        - name: GITEA__queue__CONN_STR
          value: redis://redis:6379/0?pool_size=100&idle_timeout=180s
        - name: GITEA__queue_0x2E_issue_indexer__TYPE
          value: redis
        - name: GITEA__indexer__ISSUE_INDEXER_TYPE
          value: db
        ports:
        - containerPort: 3000
          name: gitea
