aws/kubernetes/test/gitea_v3.yaml

---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: efs-sct
spec:
  capacity:
    storage: 5Gi
  volumeMode: Filesystem
  accessModes:
    - ReadWriteMany
    - ReadWriteOnce
  storageClassName: efs-sc
  persistentVolumeReclaimPolicy: Retain
  csi:
    driver: efs.csi.aws.com
    volumeHandle: fs-0f0afa1e2739f5147::fsap-092f0d29859b6f590

---
kind: StorageClass
apiVersion: storage.k8s.io/v1
metadata:
  name: efs-sc
  namespace: gitea-testing
  labels:
    app: gitea
    type: efs
provisioner: efs.csi.aws.com
parameters:
  provisioningMode: efs-ap
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: efs-claim
  namespace: gitea-testing
  labels:
    app: gitea
    type: efs
spec:
  accessModes:
    - ReadWriteMany
  storageClassName: efs-sc
  resources:
    requests:
      storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  ports:
    - protocol: TCP
      port: 3000
      nodePort: 30339
  selector:
    app: gitea
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-testing
  labels:
    app: gitea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
#      securityContext:
#        runAsUser: 1000
#        runAsGroup: 1000
#        fsGroup: 1000
#      initContainers:
#        - name: take-data-dir-ownership
#          image: alpine:3
#          command:
#          - mkdir
#          - 1gitea
#          command:
#          - chown
#          - -R
#          - 1000:1000
#          - 1gitea
#          volumeMounts:
#          - name: efs
#            mountPath: /mnt

#        - name: init-setup-db
#          image: mysql:5.7
#          env:
#          - name: GITEA_DB_USER
#            valueFrom:
#              secretKeyRef:
#                name: mysql-gitea-secret
#                key: username
#          - name: GITEA_DB_PASS
#            valueFrom:
#              secretKeyRef:
#                name: mysql-gitea-secret
#                key: password
#          command:
#            - "/bin/sh"
#            - "-c"
#            - "until mysql --host=mysql.gitea-testing --user=$GITEA_DB_USER --password=$GITEA_DB_PASS --execute=\"SELECT 1;\"; do echo waiting for mysql; sleep 2; done;" 
#        - name: init-setup-redis
#          image: busybox:1.28
#          command: ['sh', '-c', "until nslookup redis.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for redis; sleep 2; done"]
      containers:
      - image: tsilyk/gitea-server:latest
        name: gitea
        env:
        - name: GITEA____APP_NAME
          #value: "Gitea:> Git with a cup of tea"
          valueFrom:
              fieldRef:
                  fieldPath: status.podIP
        - name: GITES____RUN_MODE
          value: prod
        - name: GITEA__database__DB_TYPE
          value: mysql
        - name: GITEA__database__HOST
          value: mysql:3306
        - name: GITEA__database__NAME
          value: gitea_db
        - name: GITEA__database__USER
          valueFrom:
            secretKeyRef:
              name: mysql-gitea-secret
              key: username
        - name: GITEA__database__PASSWD
          valueFrom:
            secretKeyRef:
              name: mysql-gitea-secret
              key: password
        - name: GITEA__server__ROOT_URL
          value: http://gitea.eq.org.ua/
        - name: GITEA__server__LFS_JWT_SECRET
          value: eqiu-ihY3KO0Uwz6MhYxagzAcABn01RR6TMyWMMdmog
        - name: GITEA__security__INTERNAL_TOKEN
          value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE2NzQ3Nzc3MjZ9.oI_kLfUUnQaJZJiwTIAF0BQmNg92CkFe-E6QVSkGJEw
        - name: GITEA__security__INSTALL_LOCK
          value: "false"
        - name: GITEA__security__SECRET_KEY
          value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYmYiOjE2NzUxMDA4NTZ9.gIdd5d-Ng_t6-atwyZEd3MgU-JEJZzAkhtiFxummUPg
        - name: GITEA__session__PROVIDER
          value: redis
        - name: GITEA__session__PROVIDER_CONFIG
          value: redis://redis:6379/0?pool_size=100&idle_timeout=180s
        - name: GITEA__queue__TYPE
          value: redis
        - name: GITEA__queue__CONN_STR
          value: redis://redis:6379/0?pool_size=100&idle_timeout=180s
        - name: GITEA__queue_0x2E_issue_indexer__TYPE
          value: redis
        - name: GITEA__indexer__ISSUE_INDEXER_TYPE
          value: db
        ports:
        - containerPort: 3000
          name: gitea
        volumeMounts:
        - name: efs
          mountPath: /var/lib/gitea
      volumes:
      - name: efs
        persistentVolumeClaim:
          claimName: efs-claim
---
#kind: StorageClass
#apiVersion: storage.k8s.io/v1
#metadata:
#  name: efs-sc
#  namespace: gitea-testing
#  labels:
#    app: gitea
#    type: efs
#provisioner: efs.csi.aws.com
#parameters:
#  provisioningMode: efs-ap
#  fileSystemId: fs-0f0afa1e2739f5147
#  directoryPerms: "777"
#  uid: 1000
#  gid: 1000
  #gidRangeStart: "1000" # optional
  #gidRangeEnd: "1000" # optional
  #  basePath: "/gitea" # optional
 
#---
##apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: efs-sc
#spec:
#  capacity:
#    storage: 5Gi
#  volumeMode: Filesystem
#  accessModes:
#    - ReadWriteMany
#    - ReadWriteOnce
#  #storageClassName: efs-sc
#  storageClassName: ""
#  persistentVolumeReclaimPolicy: Retain
#  csi:
#    driver: efs.csi.aws.com
#    volumeHandle: fs-0f0afa1e2739f5147::fsap-092f0d29859b6f590
